--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -28,7 +28,7 @@
     "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.24.0",
+    "@floating-ui/react": "^0.25.1",
     "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.3",
     "@tanstack/match-sorter-utils": "^8.7.6",
@@ -51,7 +51,9 @@
   "peerDependencies": {
     "react": "^16 || ^17 || ^18",
     "react-dom": "^16 || ^17 || ^18",
-    "tailwindcss": "^3.0"
+    "tailwindcss": "^3.0",
+    "@floating-ui/react": "^0.25.1",
+    "keyboard-key": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
