--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^16 || ^17 || ^18",
     "tailwindcss": "^3.0",
     "@floating-ui/react": "^0.25.1",
+    "@floating-ui/react-dom": "^2.0.1",
     "keyboard-key": "^1.1.0"
   },
   "devDependencies": {
@@ -90,7 +91,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-visualizer": "^5.9.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.1.6"
   },
   "keywords": [
     "javascript",
