--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.25.1",
+    "@floating-ui/react-dom": "^2.0.1",
     "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.3",
     "@tanstack/match-sorter-utils": "^8.7.6",
