--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "keyboard-key": "^1.1.0",
     "@babel/parser": "^7.21.4",
     "@floating-ui/react": "^0.25.1",
+    "@floating-ui/react-dom": "^2.0.1",
     "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.2",
     "@mdi/js": "^7.2.96",
