--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -52,10 +52,7 @@
   "peerDependencies": {
     "react": "^16 || ^17 || ^18",
     "react-dom": "^16 || ^17 || ^18",
-    "tailwindcss": "^3.0",
-    "@floating-ui/react": "^0.25.1",
-    "@floating-ui/react-dom": "^2.0.1",
-    "keyboard-key": "^1.1.0"
+    "tailwindcss": "^3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
