--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@headlessui/tailwindcss": "^0.1.2",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
+    "@preact/signals-react": "^1.3.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/match-sorter-utils": "^8.7.6",
