--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@creation-ui/react",
   "homepage": "https://creation-ui.com",
-  "version": "0.10.3",
+  "version": "0.11.0",
   "description": "@creation-ui/react is an easy-to-use components library for ReactJS & Tailwind CSS.",
   "repository": "https://github.com/creativetimofficial/creation-ui",
   "license": "MIT",
@@ -11,7 +11,7 @@
     "access": "public"
   },
   "scripts": {
-    "copy": "cp ./package.json ./build && cp ./README.md ./build && cp ./LICENSE ./build  && cp ./src/index.css ./build",
+    "copy": "cp ./package.json ./build && cp ./README.md ./build && cp ./LICENSE ./build",
     "lint:check": "eslint . --ext js,jsx,ts,tsx --max-warnings=0 --config .eslintrc.json --no-eslintrc",
     "prettier:check": "prettier -c .",
     "prettify": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
@@ -25,7 +25,7 @@
     "build:rollup": "pnpm build:version && pnpm tsc && pnpm build:rm && rollup -c",
     "build:rm": "rm -rf build",
     "ci:publish": "pnpm publish -r",
-    "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)",
+    "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags) || true",
     "core": "pnpm i @creation-ui/core@latest"
   },
   "dependencies": {
