--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -46,6 +46,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
+    "react-input-mask": "^2.0.4",
     "react-spring": "^9.7.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
