--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -59,6 +59,7 @@
     "tailwindcss": "^3.0"
   },
   "devDependencies": {
+    "@types/react-input-mask": "^3.0.5",
     "@babel/core": "^7.21.3",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
