--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -56,7 +56,8 @@
     "@creation-ui/core": "latest",
     "react": "^16 || ^17 || ^18",
     "react-dom": "^16 || ^17 || ^18",
-    "tailwindcss": "^3.0"
+    "tailwindcss": "^3.0",
+    "react-input-mask": "^2"
   },
   "devDependencies": {
     "@types/react-input-mask": "^3.0.5",
