--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "sass": "^1.59.3",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-debug-screens": "^2.2.1",
+    "react-input-mask": "^2.0.4",
     "ts-json-schema-generator": "^1.2.0",
     "uuid": "^9.0.0"
   },
@@ -101,6 +102,7 @@
     "@types/react": "^18.0.27",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.6",
+    "@types/react-input-mask": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
