--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "amend": "git commit --amend --no-edit",
     "import-check": "npx cycle-import-check",
     "rm:build": "rm -rf ./packages/react/build",
-    "e2e": "pnpm package:build && cypress run",
-    "e2e:dev": "pnpm package:build && cypress open",
+    "test": "pnpm package:build && cypress run",
+    "test:dev": "pnpm package:build && cypress open",
     "override-version": "sh ./override-version.sh",
     "generate:docs": "node ./scripts/generate-docs.js",
     "prettify": "prettier --write .",
@@ -46,6 +46,7 @@
     "@tanstack/match-sorter-utils": "^8.7.6",
     "@tanstack/react-table": "^8.7.9",
     "@tanstack/table-core": "^8.7.9",
+    "@types/cypress": "^1.1.3",
     "@types/mdx": "^2.0.3",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
@@ -54,7 +55,6 @@
     "@vercel/analytics": "^0.1.11",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "cypress": "^12.9.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "framer-motion": "^10.8.4",
@@ -73,13 +73,13 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.20.0",
+    "react-input-mask": "^2.0.4",
     "react-spring": "^9.7.1",
     "react-stick": "^5.0.3",
     "react-timer-hook": "^3.0.5",
     "sass": "^1.59.3",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-debug-screens": "^2.2.1",
-    "react-input-mask": "^2.0.4",
     "ts-json-schema-generator": "^1.2.0",
     "uuid": "^9.0.0"
   },
@@ -107,6 +107,7 @@
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
     "css-loader": "^6.7.3",
+    "cypress": "^13.6.1",
     "deep-merge": "^1.0.0",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.8.0",
