--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "package:version": "pnpm --filter ./packages/react ci:version",
     "package:build": "pnpm rm:build && pnpm --filter ./packages/react build",
     "package:publish": "pnpm --filter ./packages/react _publish",
-    "package": "pnpm package:version && pnpm package:build && pnpm package:publish",
+    "package": "pnpm package:version && pnpm package:build && pnpm test && pnpm package:publish",
     "export": "next export",
     "ci:publish": "pnpm publish -r",
     "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)",
     "amend": "git commit --amend --no-edit",
     "import-check": "npx cycle-import-check",
     "rm:build": "rm -rf ./packages/react/build",
-    "test": "pnpm package:build && cypress run",
-    "test:dev": "pnpm package:build && cypress open",
+    "test": "pnpm package:build && cypress run --component",
+    "test:dev": "pnpm package:build && cypress open --component",
     "override-version": "sh ./override-version.sh",
     "generate:docs": "node ./scripts/generate-docs.js",
     "prettify": "prettier --write .",
