--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -48,6 +48,7 @@
     "react-highlight-words": "^0.20.0",
     "react-input-mask": "^2.0.4",
     "react-spring": "^9.7.1",
+    "resize-observer-polyfill": "^1.5.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
     "uuid": "^9.0.0"
@@ -56,11 +57,10 @@
     "@creation-ui/core": "latest",
     "react": "^16 || ^17 || ^18",
     "react-dom": "^16 || ^17 || ^18",
-    "tailwindcss": "^3.0",
-    "react-input-mask": "^2"
+    "react-input-mask": "^2",
+    "tailwindcss": "^3.0"
   },
   "devDependencies": {
-    "@types/react-input-mask": "^3.0.5",
     "@babel/core": "^7.21.3",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
@@ -75,6 +75,7 @@
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-input-mask": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
