--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-spring": "^9.7.1",
     "react-stick": "^5.0.3",
     "react-timer-hook": "^3.0.5",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.59.3",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-debug-screens": "^2.2.1",
