--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-table": "^8.7.9",
     "@tanstack/table-core": "^8.7.9",
     "@types/cypress": "^1.1.3",
+    "@types/lodash.get": "^4.4.9",
     "@types/mdx": "^2.0.3",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
@@ -60,6 +61,7 @@
     "framer-motion": "^10.8.4",
     "keyboard-key": "^1.1.0",
     "lodash": "^4.17.21",
+    "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "lodash.values": "^4.3.0",
     "mini-svg-data-uri": "^1.4.4",
