--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -37,9 +37,11 @@
     "@tanstack/match-sorter-utils": "^8.7.6",
     "@tanstack/react-table": "^8.7.9",
     "@tanstack/table-core": "^8.7.9",
+    "@types/lodash.get": "^4.4.9",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "keyboard-key": "^1.1.0",
+    "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "lodash.values": "^4.3.0",
     "mini-svg-data-uri": "^1.4.4",
