--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,28 +1,26 @@
-name: on-release
+name: Publish NPM Package
 
 on:
   release:
-    types: [published]
+    types: [created]
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-      - name: Setup Node.js 16.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Install Dependencies
-        run: pnpm i
-      - name: Update version in package.json
-        run: pnpm package:version
-      - name: Update version in home package.json
-        run: pnpm ci:version
-      - name: Create a package and Publish to npm
-        run: pnpm package:build
-      - name: Publish package
-        run: package:publish
-        env:
-          NPM_TOKEN_AUTOMATION: ${{ secrets.NPM_TOKEN_AUTOMATION }}
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        registry-url: 'https://registry.npmjs.org'
+
+    - name: Install dependencies
+      run: pnpm install -r
+
+    - name: Build and Test
+      run: pnpm run package
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
