--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,26 +1,26 @@
-name: Publish NPM Package
+name: publish package
 
 on:
   release:
-    types: [created]
+    types: [created, published, released]
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-        registry-url: 'https://registry.npmjs.org'
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          registry-url: 'https://registry.npmjs.org'
 
-    - name: Install dependencies
-      run: pnpm install -r
+      - name: Install dependencies
+        run: pnpm install -r
 
-    - name: Build and Test
-      run: pnpm run package
-      env:
-        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - name: Build and Test
+        run: pnpm run package
+        env:
+          NPM_TOKEN_AUTOMATION: ${{secrets.NPM_TOKEN_AUTOMATION}}
