--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: publish package
 
 on:
   release:
-    types: [created, published, released]
+    types: [created]
 
 jobs:
   build-and-publish:
