--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,12 +26,12 @@ jobs:
       - name: Update version
         run: pnpm package:version
 
-      - name: Commit version number
+        - name: Commit version number
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -am "chore: save version number" || true
-          git push
+          git push origin HEAD:master
 
       - name: Build and Test
         run: pnpm package:auto
