--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,17 +23,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install -r
 
-      - name: Update version
-        run: pnpm package:version
-
-      - name: Commit version number
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git commit -am "chore: save version number" || true
-          git push origin HEAD:master
-
       - name: Build and Test
-        run: pnpm package:auto
+        run: pnpm package
         env:
           NPM_TOKEN_AUTOMATION: ${{secrets.NPM_TOKEN_AUTOMATION}}
