--- a/packages/react/.npmrc
+++ b/packages/react/.npmrc
@@ -1,3 +1,3 @@
 auto-install-peers=true
 strict-peer-dependencies=false
-//registry.npmjs.org/:_authToken=$NPM_TOKEN_AUTOMATION
+//registry.npmjs.org/:_authToken=${NPM_TOKEN_AUTOMATION}
