--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,13 +15,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '16'
-          registry-url: 'https://registry.npmjs.org'
 
       - name: Install pnpm
         run: npm install -g pnpm
 
       - name: Install dependencies
         run: pnpm install -r
+
+      - name: Set NPM token
+        run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN_AUTOMATION}" > .npmrc
 
       - name: Build and Test
         run: pnpm package
